dist_man1_MANS=

if BUILD_CDUCOIND
  dist_man1_MANS+=cducoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cducoin-qt.1
endif

if BUILD_CDUCOIN_CLI
  dist_man1_MANS+=cducoin-cli.1
endif

if BUILD_CDUCOIN_TX
  dist_man1_MANS+=cducoin-tx.1
endif

if BUILD_CDUCOIN_UTIL
  dist_man1_MANS+=cducoin-util.1
endif

if ENABLE_WALLET
if BUILD_CDUCOIN_WALLET
  dist_man1_MANS+=cducoin-wallet.1
endif
endif
